# test-smp-repo

./: CITATION.cff  README.md  pyproject.toml  test_import_values.xml  weather_analyser.xml
data/: bla.xml  smp.json  smp.xml  smp_csvcomma.csv  smp_csvsemicolon.csv  smp_report.html  weather_analyser.xml
smp/: smp.xml
src/: bla_script.py
